# aide

./: .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  VERSION  install  install.sh  registry.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/frontend/: action.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  security.yml
assets/deploy/: install.sh
cli/: .golangci.yml  go.mod  go.sum
cli/cmd/aide/: AGENTS.md  agent.go  agent_config.go  configcmd.go  credential.go  devcmd.go  diff.go  helpers.go  history.go  initcmd.go  main.go  plugincmd.go  plugincmd_auth.go  plugincmd_configure.go  plugincmd_install.go  prune.go  (+21 more)
cli/cmd/aide-app/: app.go  main.go  notify.go  panel_darwin.go  panel_other.go
packaging/homebrew/: README.md  render.sh
scrapers/: pyproject.toml  requirements.txt
scrapers/framework/: __init__.py  base.py  models.py  registry.py  runner.py
scrapers/sources/: example.py  gitlab.py  jira.py  outlook.py  rh_management_portal.py  rh_portal.py  sailpoint.py
sdk/go/: go.mod  log.go  plugin.go
sdk/python/: pyproject.toml
sdk/python/aide_plugin_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/aide_sdk/: __init__.py  base.py  log.py  models.py  runtime.py
sdk/python/aide_sdk.egg-info/: SOURCES.txt
sdk/python/requirements/: ci-build.txt  ci-pip.txt  ci-test.in  ci-test.txt
sdk/python/tests/: test_models.py
(+428 files in other folders)
