[project]
name = "aide-scrapers"
version = "0.1.0"
description = "Scraper plugins for Aide personal assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "playwright>=1.40",
    "msal>=1.28",
    "python-gitlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120
